dom/media/AudioStream.h
@@ -322,9 +322,6 @@ private:
 
   StreamState mState;
   bool mIsFirst;
-  // The last good position returned by cubeb_stream_get_position(). Used to
-  // check if the cubeb position is going backward.
-  uint64_t mLastGoodPosition;
   // Get this value from the preferece, if true, we would downmix the stereo.
   bool mIsMonoAudioEnabled;
 };
